Validation code updated